--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
-		<title>homework2</title>
+		<title>Final Project</title>
 		<meta charset="utf-8">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 		<link href="css/bootstrap.min.css" rel="stylesheet"></link>
@@ -88,7 +88,7 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="index.html">Introduction<span class="sr-only">(current)</span></a></li>
-						<li><a href="index.html">Map View</a></li>
+						<li><a href="maps.html">Map View</a></li>
 						<li><a href="index.html">Details</a></li>
 					</ul>
 				</div>
@@ -121,8 +121,6 @@
 
 
 		</table>
-
-
 
 	</body>
 	<!--
