--- a/maps.html
+++ b/maps.html
@@ -31,11 +31,8 @@
 			</nav>
 		</div>
 		<div class="container-fluid">
-			<div class="col-xs-2">
-				Filter 
-			</div>
-			<div class="col-xs-10">
-				<div id="canvas" height="800">
+			<div class="col-xs-12">
+				<div id="canvas" align="center">
 					test
 				</div>
 			</div>
