web page address fixed

--- a/public_html/opening.html
+++ b/public_html/opening.html
@@ -81,7 +81,7 @@
 			
 			<div class="block row">
 				<button type="button" class="col-sm-2 col-sm-offset-3 btn btn-default"><a href="index.html">Home</a></button>
-				<button type="button" class="col-sm-2 col-sm-offset-1 btn btn-default"><a href="vis.html">Visualization</a></button>
+				<button type="button" class="col-sm-2 col-sm-offset-1 btn btn-default"><a href="parcoords.html">Visualization</a></button>
 			</div>
 		</div>
 <!--	====================================================================	-->				
