button style changed

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,21 +3,18 @@
 <html>
   <head>
     <title>Deep into the Immigration Situation in USA</title>
-		
-<!--	====================================================================	-->		
-		<meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--	====================================================================	-->
-		<link rel="stylesheet" href="css/style.css"/>
-		<link rel="stylesheet" href="css/bootstrap.min.css"/>
-<!--	====================================================================	-->		
-
+<!--	===================================================================================	-->		
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--	===================================================================================	-->
+	<link rel="stylesheet" href="css/style.css"/>
+	<link rel="stylesheet" href="css/bootstrap.css"/>		
+<!--	===================================================================================	-->
   </head>
 	
   <body>
 		<div class="container">
-			<div class="title">Information Visualization Final Project (2015 Fall)</div>
 			<div class="title">Economic Indicators for the U.S.</div>
 			<div class="author">Chun-Chung Yang, Xiaofei Chen, and Dace Lukasa-Tangri</div>
 			<div class="block"><div class="img img-responsive"><img src="img/gold.jpg" alt="screenshot"></div></div>
@@ -29,8 +26,8 @@
 				</div>
 			</div>
 			<div class="block">
-				<button type="button" class="btn btn-default"><a href="opening.html">Demo</a></button>
-				<button type="button" class="btn btn-default"><a href="report.pdf">Final Report</a></button>
+				<button type="button" class="col-sm-3 col-sm-offset-2 btn btn-primary"><a href="opening.html">Demo</a></button>
+				<button type="button" class="col-sm-3 col-sm-offset-2 btn btn-success"><a href="report.pdf">Final Report</a></button>
 			</div>
 		</div>	
 <!--	====================================================================	-->				
