--- a/public_html/opening.html
+++ b/public_html/opening.html
@@ -1,60 +1,62 @@
 <!DOCTYPE html>
 <html>
 	<head>
-<!--	====================================================================	-->		
-		<meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--	====================================================================	-->
-		<link rel="stylesheet" href="css/style.css"/>
-		<link rel="stylesheet" href="css/bootstrap.min.css"/>
-<!--	====================================================================	-->		
-		<script type="text/javascript" src="https://www.google.com/jsapi"></script>
-			<script type="text/javascript">
-				google.load("visualization", "1.1", {packages:["wordtree"]});
-				google.setOnLoadCallback(drawChart);
-
-				function drawChart() {
-					var data = google.visualization.arrayToDataTable(
-						[ ['Phrases'],
-							['economy is important to improve financial stability'],
-							['economy is important to reduce risks and present challenges'],
-							['economy is important to have wealthy country'],
-							['economy is important for planing the future'],
-							['economy is important as it ensures happiness and satisfaction of its people'],
-
-							['economy key influencing factor is Gross Domestic Product'],
-							['economy key influencing factor is education'],
-							['economy key influencing factor is poverty'],
-							['economy key influencing factor is income versus expenses'],
-
-							['economy in USA have shown stable growth'],
-							['economy in USA is number 1 in the world'],
-							['economy in USA growth has started to slow down opposite to emerging countries'],
-							['economy in USA reduced poverty'],
-							['economy in USA reduced unemployment'],
-
-							['economy strength = better edducated and more productive workforce'],
-							['economy strength = global outlook '],
-							['economy strength = population - successfully utilized or not'],
-
-
-							['economy global outlook depends on countrys macroeconomic policies'],
-							['economy global outlook key factor is Gross Domestic Product'],
-						]);
-
-					var options = {
-						wordtree: {
-							format: 'implicit',
-							word: 'economy'
-						}
-					};
-
-					var chart = new google.visualization.WordTree(document.getElementById('wordtree_basic'));
-					chart.draw(data, options);
-				}
-			</script>
 		<title>U.S. Economy</title>
+<!--	===================================================================================	-->		
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--	===================================================================================	-->
+		<link rel="stylesheet" href="css/style.css"/>
+		<link rel="stylesheet" href="css/bootstrap.css"/>
+<!--	===================================================================================	-->		
+		<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+		<script type="text/javascript">
+			google.load("visualization", "1.1", {packages:["wordtree"]});
+			google.setOnLoadCallback(drawChart);
+
+			function drawChart() {
+				var data = google.visualization.arrayToDataTable(
+					[ ['Phrases'],
+						['economy is important to improve financial stability'],
+						['economy is important to reduce risks and present challenges'],
+						['economy is important to have wealthy country'],
+						['economy is important for planing the future'],
+						['economy is important as it ensures happiness and satisfaction of its people'],
+
+						['economy key influencing factor is Gross Domestic Product'],
+						['economy key influencing factor is education'],
+						['economy key influencing factor is poverty'],
+						['economy key influencing factor is income versus expenses'],
+
+						['economy in USA have shown stable growth'],
+						['economy in USA is number 1 in the world'],
+						['economy in USA growth has started to slow down opposite to emerging countries'],
+						['economy in USA reduced poverty'],
+						['economy in USA reduced unemployment'],
+
+						['economy strength = better edducated and more productive workforce'],
+						['economy strength = global outlook '],
+						['economy strength = population - successfully utilized or not'],
+
+
+						['economy global outlook depends on countrys macroeconomic policies'],
+						['economy global outlook key factor is Gross Domestic Product'],
+					]);
+
+				var options = {
+					wordtree: {
+						format: 'implicit',
+						word: 'economy'
+					}
+				};
+
+				var chart = new google.visualization.WordTree(document.getElementById('wordtree_basic'));
+				chart.draw(data, options);
+			}
+		</script>
+<!--	===================================================================================	-->		
+
 	</head>
 
 	<body>
@@ -64,14 +66,14 @@
 			<div class="block table-responsive">	
 				<table border="3" class="table">
 					<tr>
-						<td  >OECD - develop a better world</td>
-						<td  style="width:20%;">Start with the Economy</td>
+						<td style="width:5%;">OECD - develop a better world</td>
+						<td style="width:20%;">Start with the Economy</td>
 						<td style="width:20%;">Plan the Future </td>
 					</tr>
 					<tr>
-						<td  style="width:5%;"><iframe width="300" height="265" src="https://www.youtube.com/embed/Y2QYeC4mQRM" frameborder="0" allowfullscreen></iframe></td>
-						<td  style="width:20%;"><iframe width="300" height="265" src="https://www.youtube.com/embed/0AdQZYk6vD0" frameborder="0" allowfullscreen></iframe></td>
-						<td  style="width:20%;"><iframe width="300" height="265" src="https://www.youtube.com/embed/fnIl212tBPk" frameborder="0" allowfullscreen></iframe></td>
+						<td style="width:5%;"><iframe width="350" height="200" src="https://www.youtube.com/embed/Y2QYeC4mQRM" frameborder="0" allowfullscreen></iframe></td>
+						<td style="width:20%;"><iframe width="350" height="200" src="https://www.youtube.com/embed/0AdQZYk6vD0" frameborder="0" allowfullscreen></iframe></td>
+						<td style="width:20%;"><iframe width="350" height="200" src="https://www.youtube.com/embed/fnIl212tBPk" frameborder="0" allowfullscreen></iframe></td>
 					</tr>
 					<tr>
 						<td colspan="3"> <div id="wordtree_basic" style="width: 900px; height: 500px;"></div></td>
@@ -80,14 +82,14 @@
 			</div>
 			
 			<div class="block row">
-				<button type="button" class="col-sm-2 col-sm-offset-3 btn btn-default"><a href="index.html">Home</a></button>
-				<button type="button" class="col-sm-2 col-sm-offset-1 btn btn-default"><a href="parcoords.html">Visualization</a></button>
+				<button type="button" class="col-sm-3 col-sm-offset-2 btn btn-primary"><a href="index.html">Home</a></button>
+				<button type="button" class="col-sm-3 col-sm-offset-2 btn btn-success"><a href="parcoords.html">Visualization</a></button>
 			</div>
 		</div>
-<!--	====================================================================	-->				
+<!--	===================================================================================	-->				
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-<!--	====================================================================	-->		
+<!--	===================================================================================	-->		
 	</body>
 
 </html> 
