--- a/public_html/parcoords.html
+++ b/public_html/parcoords.html
@@ -50,8 +50,8 @@
 			</div>				
 			<div class="wrapper">
 				<div id="parallel" class="parallel"> 			
-					<div id="example" class="parcoords" style="height:800px; width:auto"></div>
-					<div id="grid"></div>
+					<div id="example" class="parcoords" style="height:800px; width:auto;"></div>
+					<div id="grid" style="width:auto;"></div>
 
 					<!--	===================================================================================	-->
 					<script id="brushing" type='text/javascript'>
