changed the whole style

--- a/public_html/wordTree.html
+++ b/public_html/wordTree.html
@@ -7,7 +7,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--	===================================================================================	-->
-		<link rel="stylesheet" href="css/style.css"/>
+		<link rel="stylesheet" href="css/text.css"/>
 		<link rel="stylesheet" href="css/bootstrap.css"/>
 <!--	===================================================================================	-->		
 		<script type="text/javascript" src="https://www.google.com/jsapi"></script>
@@ -59,13 +59,21 @@
 
 	</head>
 
-	<body>
-		<div class="container">
-			<div class="title">Welcome to our Analysis of the U.S. Economy</div>
-			
+	<body class="container">
+		<div class="row">
+			<p class="title">Welcome to our Analysis of the U.S. Economy</p>
+		</div>
+	  	<div class="row">
+	  		<ul class="nav nav-tabs nav-justified">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="wordTree.html">Word Tree</a></li>
+				<li><a href="mapView.html">Map View</a></li>
+			</ul>
+	  	</div>
+		<div class="row">
 			<div class="block table-responsive">	
 				<table border="3" class="table">
-					<tr>
+					<tr class="video-title">
 						<td style="width:5%;">OECD - develop a better world</td>
 						<td style="width:20%;">Start with the Economy</td>
 						<td style="width:20%;">Plan the Future </td>
@@ -80,16 +88,11 @@
 					</tr>
 				</table>
 			</div>
-			
-			<div class="block row">
-				<button type="button" class="col-sm-3 col-sm-offset-2 btn btn-primary"><a href="index.html">Home</a></button>
-				<button type="button" class="col-sm-3 col-sm-offset-2 btn btn-success"><a href="parcoords.html">Visualization</a></button>
-			</div>
 		</div>
-<!--	===================================================================================	-->				
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-<!--	===================================================================================	-->		
+		<!--	===================================================================================	-->				
+	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	    <script src="js/bootstrap.min.js"></script>
+		<!--	===================================================================================	-->		
 	</body>
 
 </html> 
