--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,34 +2,53 @@
 
 <html>
   <head>
-    <title>Deep into the Immigration Situation in USA</title>
+    <title>Economic Indicators for the U.S.</title>
 <!--	===================================================================================	-->		
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--	===================================================================================	-->
-	<link rel="stylesheet" href="css/style.css"/>
+	<link rel="stylesheet" href="css/text.css"/>
 	<link rel="stylesheet" href="css/bootstrap.css"/>	
 <!--	===================================================================================	-->
   </head>
 	
-  <body>
-		<div class="container">
-			<div class="title">Economic Indicators for the U.S.</div>
-			<div class="author">Chun-Chung Yang, Xiaofei Chen, and Dace Lukasa-Tangri</div>
-			<div class="block"><div class="img img-responsive"><img src="img/gold.jpg" alt="screenshot"></div></div>
-
-			<div class="block">
-				<div class="subtitle">Abstract</div>
-				<div class="context">
+  <body class="container">
+		
+			<div class="row">
+				<p class="title">Economic Indicators for the U.S.</p>
+			</div>
+			
+			<div class="img img-responsive"><img src="img/gold.jpg" alt="screenshot"></div>
+			<div class="row">
+				<p class="subtitle">Abstract</p>
+				<p>
 					In this paper, we present a well-formed system for immigration data visualization. The United States is an immigration country since the beginning, and the immigration data is kept well by Department of Homeland Security (DHS). All of our data is from DHS to keep the accuracy and integrality. Our visualization system contains three aspect of immigration situation, which are historical trend, factor analysis and immigration flow. We also establish cascading steps for users to get a deeper knowledge of immigration situation by the three designs in our system. Proportional line chart, bipartite chart, choropleth maps and accordingly interactive design are used in our designs. The purpose of our system is to help the uses get a basic concept, as well as a deep understanding of the immigration situation in the United States.
-				</div>
+				</p>
 			</div>
-			<div class="block">
-				<button type="button" class="col-sm-3 col-sm-offset-2 btn btn-primary"><a href="opening.html">Demo</a></button>
-				<button type="button" class="col-sm-3 col-sm-offset-2 btn btn-success"><a href="report.pdf">Final Report</a></button>
+
+			<div class="row">
+				<p class="subtitle">Demo</p>
+				<p><a href="intro.html">Visualization Online!</a></p>
 			</div>
-		</div>	
+
+			<div class="row">
+				<p class="subtitle">Documentation</p>
+				<ul>
+					<li><a href="report.pdf">Final Report</a></li>
+					<li><a href="slides.pdf">Presentation</a></li>
+				</ul>
+			</div>
+
+			<div class="row">
+				<p class="subtitle">Contact</p>
+				<ul class="author">
+					<li>Chun-Chung Yang</li>
+					<li>Xiaofei Chen</li>
+					<li>Dace Lukasa-Tangri</li>
+				</ul>
+			</div>
+
 <!--	===================================================================================	-->		
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
