--- a/public_html/parcoords.html
+++ b/public_html/parcoords.html
@@ -20,6 +20,7 @@
 		<script type="text/javascript" src="http://d3js.org/topojson.v1.min.js"></script>
 		<script type="text/javascript" src="http://d3js.org/queue.v1.min.js"></script>
 		<script type="text/javascript" src="js/RadarChart.js"></script>
+		<script type="text/javascript" src="js/d3.tip.v0.6.3.js"></script>
 		<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.0/css/bootstrap-toggle.min.css" rel="stylesheet">
 		<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.0/js/bootstrap-toggle.min.js"></script>
 		<!--	===================================================================================	-->		
@@ -30,8 +31,9 @@
 			<div class="title">U.S. Map View</div>			
 			<div class="row">
 				<div class="col-md-4" style="height:200px;">
-					<img src="img/colorbar.png" width="90%" style="width:auto; margin: -100 0 0 0; auto;"></img>
-					<img src="img/glyph.png"></img>
+					<img src="img/colorbar.png" width="90%" style="width:auto; margin: 0 0 0 60px;"></img>
+					<img src="img/poverty.png" width="90%" style="width:550px; margin: 0 0 0 -20px;"></img>
+					<img src="img/glyph.png" style=" margin: 0 0 0 150px; "></img>
 				</div>
 				<div class="col-md-4 slidingbar" style="height: 200px;">
 					<form>
@@ -40,9 +42,16 @@
 					</form>
 				</div>
 				<div class="col-md-4" style="200px">
+					<div class="checkbox" style="display:inline-block;text-align:center;margin:50px 0 0 100px">
+						<label>
+							<input type="checkbox" data-toggle="toggle" id="showlabels" checked>
+							<font size="5">Show Labels</font>
+						</label>
+					</div>
 				</div>
 			</div>
 			<div class="block" id="glyph" align="center"></div>
+			<div class="block" id="compare" align="center"></div>
 			<div class="row">
 				<button type="button" class="col-sm-2 col-sm-offset-1 btn btn-primary"><a href="index.html">Home</a></button>
 				<button type="button" class="col-sm-2 col-sm-offset-2 btn btn-success"><a href="opening.html">Back</a></button>
@@ -60,12 +69,15 @@
 						.color('steelblue')
 						.alpha(0.4);					
 						var selected_data;
+						var parData;
 
 						// load csv file and create the chart
 						d3.csv('./csv/state.csv', function(data) {
 								selected_data = data.filter(function(row) {
 									return row['Income ($)'] >= 50000 && row['Income ($)'] <= 51000;
-									})
+									});
+
+								parData = data;
 
 								parcoords
 								.data(data)
@@ -108,8 +120,23 @@
 			$('#console-event').html(2014);
 			function select_year(thresh) {
 				$('#console-event').html(thresh);
+				year = thresh;
 				explorer.update(thresh);			
 			}
+
+			$('#showlabels').change(function() {
+				if($(this).prop('checked')){
+					console.log($("g .legend"));
+					$("g .legend").css("visibility", "visible") ;
+					showlabels = 1;
+				}
+				else {
+					$("g .legend").css("visibility", "hidden") ;
+					showlabels = 0;
+				}
+			})
+
+
 		</script>
 		<!--	===================================================================================	-->
 	</body>
