--- a/public_html/parcoords.html
+++ b/public_html/parcoords.html
@@ -73,9 +73,7 @@
 
 						// load csv file and create the chart
 						d3.csv('./csv/state.csv', function(data) {
-								selected_data = data.filter(function(row) {
-									return row['Income ($)'] >= 50000 && row['Income ($)'] <= 51000;
-									});
+								selected_data = data;
 
 								parData = data;
 
